tests/ui/or-patterns/mismatched-bindings-async-fn.stderr
error[E0408]: variable `s` is not bound in all patterns
  --> $DIR/mismatched-bindings-async-fn.rs:4:13
   |
LL | async fn a((x | s): String) {}
   |             ^   - variable not in all patterns
   |             |
   |             pattern doesn't bind `s`
   |
help: you might have meant to use the similarly named previously used binding `x`
   |
LL - async fn a((x | s): String) {}
LL + async fn a((x | x): String) {}
   |

error[E0408]: variable `x` is not bound in all patterns
  --> $DIR/mismatched-bindings-async-fn.rs:4:17
   |
LL | async fn a((x | s): String) {}
   |             -   ^ pattern doesn't bind `x`
   |             |
   |             variable not in all patterns
   |
help: you might have meant to use the similarly named previously used binding `s`
   |
LL - async fn a((x | s): String) {}
LL + async fn a((s | s): String) {}
   |

error[E0408]: variable `s` is not bound in all patterns
  --> $DIR/mismatched-bindings-async-fn.rs:9:10
   |
LL |     let (x | s) = String::new();
   |          ^   - variable not in all patterns
   |          |
   |          pattern doesn't bind `s`
   |
help: you might have meant to use the similarly named previously used binding `x`
   |
LL -     let (x | s) = String::new();
LL +     let (x | x) = String::new();
   |

error[E0408]: variable `x` is not bound in all patterns
  --> $DIR/mismatched-bindings-async-fn.rs:9:14
   |
LL |     let (x | s) = String::new();
   |          -   ^ pattern doesn't bind `x`
   |          |
   |          variable not in all patterns
   |
help: you might have meant to use the similarly named previously used binding `s`
   |
LL -     let (x | s) = String::new();
LL +     let (s | s) = String::new();
   |

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0408`.
